[gd_scene load_steps=7 format=2]

[ext_resource path="res://addons/godot-accessibility/ScreenReader.gd" type="Script" id=1]
[ext_resource path="res://assets/menus/settings_menu.gd" type="Script" id=2]
[ext_resource path="res://assets/ui/ui.theme" type="Theme" id=3]
[ext_resource path="res://assets/ui/input_limiter.tscn" type="PackedScene" id=4]

[sub_resource type="StyleBoxEmpty" id=1]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="ButtonGroup" id=2]

[node name="SettingsMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScreenReader" type="Node" parent="."]
pause_mode = 2
script = ExtResource( 1 )
logging = false

[node name="InputLimiter" parent="." instance=ExtResource( 4 )]

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer"]
margin_left = 24.0
margin_top = 80.0
margin_right = 964.0
margin_bottom = 560.0
custom_constants/margin_top = -72

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer"]
margin_top = -72.0
margin_right = 940.0
margin_bottom = 480.0
custom_constants/separation = 22

[node name="RichTextLabel" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_right = 940.0
margin_bottom = 29.0
custom_colors/default_color = Color( 0.270588, 0.235294, 0.168627, 1 )
custom_colors/selection_color = Color( 0, 0, 0, 1 )
bbcode_enabled = true
bbcode_text = "[center]SETTINGS MENU[/center]"
text = "SETTINGS MENU"
fit_content_height = true

[node name="Contents" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer"]
margin_top = 51.0
margin_right = 940.0
margin_bottom = 552.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents"]
margin_right = 940.0
margin_bottom = 461.0
size_flags_vertical = 3
alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer"]
margin_left = 172.0
margin_right = 768.0
margin_bottom = 461.0
size_flags_vertical = 3
custom_styles/bg = SubResource( 1 )
follow_focus = true
scroll_horizontal_enabled = false

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 580.0
margin_bottom = 943.0
rect_min_size = Vector2( 400, 0 )
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AccessibilityHeader" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_right = 576.0
margin_bottom = 29.0
text = "Accessibility Settings"
fit_content_height = true

[node name="ScreenReaderCheckButton" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 33.0
margin_right = 576.0
margin_bottom = 67.0
text = "Menu narration"

[node name="RemovePrefixCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 71.0
margin_right = 576.0
margin_bottom = 109.0
text = "Remove button prefix (>, \"greater\")"

[node name="RemovePeriodsCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 576.0
margin_bottom = 151.0
text = "Remove noisy periods from buttons (.)"

[node name="InputCooldownCheckButton" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 155.0
margin_right = 576.0
margin_bottom = 189.0
text = "Input cooldown"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 193.0
margin_right = 576.0
margin_bottom = 315.0
custom_constants/margin_left = 40

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer"]
margin_left = 40.0
margin_right = 576.0
margin_bottom = 122.0

[node name="InputCooldownRadio003" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
visible = false
margin_right = 536.0
margin_bottom = 38.0
group = SubResource( 2 )
text = "0.03 seconds"

[node name="InputCooldownRadio010" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_right = 536.0
margin_bottom = 38.0
group = SubResource( 2 )
text = "0.10 seconds"

[node name="InputCooldownRadio025" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 42.0
margin_right = 536.0
margin_bottom = 80.0
group = SubResource( 2 )
text = "0.25 seconds"

[node name="InputCooldownRadio050" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer"]
margin_top = 84.0
margin_right = 536.0
margin_bottom = 122.0
group = SubResource( 2 )
text = "0.50 seconds"

[node name="InputBlockedNotifierCheckBox" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 319.0
margin_right = 576.0
margin_bottom = 353.0
text = "Show \"Input Blocked\" on screen"

[node name="DisableKeyEchoCheckBox" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 357.0
margin_right = 576.0
margin_bottom = 391.0
text = "Disable key repeat"

[node name="ShowUndoCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 395.0
margin_right = 576.0
margin_bottom = 433.0
text = "Show \"Undo\" button"

[node name="Gap" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 437.0
margin_right = 576.0
margin_bottom = 447.0
rect_min_size = Vector2( 0, 10 )

[node name="VisualHeader" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 451.0
margin_right = 576.0
margin_bottom = 480.0
text = "Visual Settings"
fit_content_height = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullscreenCheckBox" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 484.0
margin_right = 576.0
margin_bottom = 518.0
text = "Fullscreen"

[node name="MonitorEffectCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 522.0
margin_right = 576.0
margin_bottom = 560.0
text = "Monitor effect on main menu"

[node name="CameraEffectCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 564.0
margin_right = 576.0
margin_bottom = 602.0
text = "Monitor effect on camera feed"

[node name="Gap2" type="Control" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 606.0
margin_right = 576.0
margin_bottom = 616.0
rect_min_size = Vector2( 0, 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioHeader" type="RichTextLabel" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 620.0
margin_right = 576.0
margin_bottom = 649.0
text = "Audio Settings"
fit_content_height = true

[node name="ChatSfxCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 653.0
margin_right = 576.0
margin_bottom = 691.0
text = "Play sound for new audio log entry"

[node name="UndoSfxCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 695.0
margin_right = 576.0
margin_bottom = 733.0
text = "Play sound on Undo"

[node name="TitleMusicCheckBox" type="CheckButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 737.0
margin_right = 576.0
margin_bottom = 771.0
text = "Play title theme"

[node name="TitleAmbienceCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 775.0
margin_right = 576.0
margin_bottom = 813.0
text = "Play ambient sounds on main menu"

[node name="CalmMusicCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 817.0
margin_right = 576.0
margin_bottom = 855.0
text = "Play in-game music (track 1)"

[node name="TenseMusicCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 859.0
margin_right = 576.0
margin_bottom = 897.0
text = "Play in-game music (track 2)"

[node name="MonitorHumCheckBox" type="CheckBox" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer"]
margin_top = 901.0
margin_right = 576.0
margin_bottom = 939.0
text = "Play monitor hum"

[node name="Details" type="HBoxContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents"]
margin_top = 469.0
margin_right = 940.0
margin_bottom = 501.0
custom_constants/separation = 40
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/Details"]
margin_left = 359.0
margin_right = 450.0
margin_bottom = 32.0
custom_constants/margin_right = 2
custom_constants/margin_top = 4
custom_constants/margin_bottom = 0

[node name="SaveAndContinueButton" type="LinkButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/Details/MarginContainer"]
margin_top = 4.0
margin_right = 89.0
margin_bottom = 32.0
focus_mode = 2
text = "> SAVE"
underline = 2

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/Details"]
margin_left = 490.0
margin_right = 581.0
margin_bottom = 32.0
custom_constants/margin_right = 2
custom_constants/margin_top = 4
custom_constants/margin_bottom = 0

[node name="DiscardAndContinueButton" type="LinkButton" parent="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/Details/MarginContainer2"]
margin_top = 4.0
margin_right = 89.0
margin_bottom = 32.0
focus_mode = 2
text = "< BACK"
underline = 2

[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/ScreenReaderCheckButton" to="." method="_on_ScreenReaderCheckButton_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/ScreenReaderCheckButton" to="." method="_on_ScreenReaderCheckButton_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/RemovePrefixCheckBox" to="." method="_on_RemovePrefixCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/RemovePrefixCheckBox" to="." method="_on_RemovePrefixCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/RemovePeriodsCheckBox" to="." method="_on_RemovePeriodsCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/RemovePeriodsCheckBox" to="." method="_on_RemovePeriodsCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/InputCooldownCheckButton" to="." method="_on_InputCooldownCheckButton_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/InputCooldownCheckButton" to="." method="_on_InputCooldownCheckButton_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/InputCooldownRadio003" to="." method="_on_InputCooldownRadio003_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/InputCooldownRadio003" to="." method="_on_InputCooldownRadio003_toggled"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/InputCooldownRadio025" to="." method="_on_InputCooldownRadio025_toggled"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MarginContainer/VBoxContainer/InputCooldownRadio050" to="." method="_on_InputCooldownRadio050_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/InputBlockedNotifierCheckBox" to="." method="_on_InputBlockedNotifierCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/InputBlockedNotifierCheckBox" to="." method="_on_InputBlockedNotifierCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/DisableKeyEchoCheckBox" to="." method="_on_DisableKeyEchoCheckBox_ready"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/ShowUndoCheckBox" to="." method="_on_ShowUndoCheckBox_ready"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/FullscreenCheckBox" to="." method="_on_FullscreenCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MonitorEffectCheckBox" to="." method="_on_MonitorEffectCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MonitorEffectCheckBox" to="." method="_on_MonitorEffectCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/CameraEffectCheckBox" to="." method="_on_CameraEffectCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/CameraEffectCheckBox" to="." method="_on_CameraEffectCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/ChatSfxCheckBox" to="." method="_on_ChatSfxCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/ChatSfxCheckBox" to="." method="_on_ChatSfxCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/UndoSfxCheckBox" to="." method="_on_UndoSfxCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/UndoSfxCheckBox" to="." method="_on_UndoSfxCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/TitleMusicCheckBox" to="." method="_on_TitleMusicCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/TitleMusicCheckBox" to="." method="_on_TitleMusicCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/TitleAmbienceCheckBox" to="." method="_on_TitleAmbienceCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/TitleAmbienceCheckBox" to="." method="_on_TitleAmbienceCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/CalmMusicCheckBox" to="." method="_on_CalmMusicCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/CalmMusicCheckBox" to="." method="_on_CalmMusicCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/TenseMusicCheckBox" to="." method="_on_TenseMusicCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/TenseMusicCheckBox" to="." method="_on_TenseMusicCheckBox_toggled"]
[connection signal="ready" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MonitorHumCheckBox" to="." method="_on_MonitorHumCheckBox_ready"]
[connection signal="toggled" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/HBoxContainer/ScrollContainer/VBoxContainer/MonitorHumCheckBox" to="." method="_on_MonitorHumCheckBox_toggled"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/Details/MarginContainer/SaveAndContinueButton" to="." method="_on_SaveAndContinueButton_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/MarginContainer/VBoxContainer/Contents/Details/MarginContainer2/DiscardAndContinueButton" to="." method="_on_DiscardAndContinueButton_pressed"]
